<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="movie app"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/your_best_application"
                android:textAlignment="center"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/firstName"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/first_name_"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/age"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/age"
                android:inputType="number"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/email"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="24sp" />


            <Button
                android:id="@+id/register"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#4383AC"
                android:text="@string/register"

                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/loginRegister"
                android:text="@string/have_an_account"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

        </LinearLayout>




</FrameLayout>