<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.logIn">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="movie app"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/your_best_application"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:id="@+id/userEmail"
            android:textSize="24sp" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/userPassword"
            android:textSize="24sp" />

        <Button
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4383AC"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:id="@+id/userLogin"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/registerLogin"
                android:text="@string/create_an_account"
                android:textAlignment="textEnd"
                android:textSize="12sp" />




        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</FrameLayout>